@@ -47,7 +47,7 @@ class TimeBroadcastTask extends BaseTask
                     }
                     $t = $this->getPlugin()->data->getAll();
                     $j = $this->getPlugin()->data1->getAll();
-                    $bail_dis = ("&2" . $this->getPlugin()->getMessage("timer.broadcast.bail") . ": &d") . (($this->getPlugin()->getEco() !== null && $this->getPlugin()->getConfig()->get("allow-bail") !== false && filter_var($j[$t[$player->getName()]["jail"]]["allow-bail"], FILTER_VALIDATE_BOOLEAN) !== false) ? ($this->getPlugin()->isJailTimeInfinite(strtolower($player->getName())) !== false) ? $this->getPlugin()->getMessage("timer.broadcast.notallowed") : "$" . ($this->getPlugin()->prisoner_time[strtolower($player->getName())] * ($this->getPlugin()->getConfig()->get("bail-per-second"))) : ($this->getPlugin()->getMessage("timer.broadcast.disabled") . ($this->emoji < 8 ? " ^o^" : " ")));
+                    $bail_dis = ("&2" . $this->getPlugin()->getMessage("timer.broadcast.bail") . ": &d") . (($this->getPlugin()->getEco() !== null && $this->getPlugin()->getConfig()->get("allow-bail") !== false && filter_var($j[$t[strtolower($player->getName())]["jail"]]["allow-bail"], FILTER_VALIDATE_BOOLEAN) !== false) ? ($this->getPlugin()->isJailTimeInfinite(strtolower($player->getName())) !== false) ? $this->getPlugin()->getMessage("timer.broadcast.notallowed") : "$" . ($this->getPlugin()->prisoner_time[strtolower($player->getName())] * ($this->getPlugin()->getConfig()->get("bail-per-second"))) : ($this->getPlugin()->getMessage("timer.broadcast.disabled") . ($this->emoji < 8 ? " ^o^" : " ")));
                     if (isset($this->getPlugin()->prisoner_time[strtolower($name)])) {
                         $time = $this->getPlugin()->prisoner_time[strtolower($name)];
                         $seconds = $time;
